--- a/index.html
+++ b/index.html
@@ -8,11 +8,35 @@
         <meta charset="UTF-8"/>
     </head>
     <body>
-        <h1 class="top-text">Display Property & Parent-Child</h1>
-        <div class="main-container">
-            <div class="main-container-first-box">
-                <div class="main-container-small-boxes">
-
+        <h1 class="top-text">
+            Display Property & Parent-Child
+        </h1>
+        <div class="main" id="content-show">
+            <div class="main-box-first-item">
+                <div class="main-for-small-boxes">
+                    <div class="small-box">
+                        <div class="extra-small-box">
+                            text example
+                        </div>  
+                    </div>
+                    <div class="small-box">
+                        <div class="extra-small-box">
+                            text example
+                        </div>  
+                    </div>
+                    <div class="small-box">
+                        <div class="extra-small-box">
+                            text example
+                        </div>    
+                    </div>
+                    <div class="small-box">
+                        <div class="extra-small-box">
+                            text example
+                        </div>    
+                    </div>
+                </div>
+                <div class="box-for-fluid">
+                    Fluid Content
                 </div>
             </div>
         </div>
